[gd_scene load_steps=4 format=2]

[ext_resource path="res://img/menu_box.png" type="Texture" id=1]
[ext_resource path="res://img/menu.png" type="Texture" id=2]
[ext_resource path="res://script/main_menu.gd" type="Script" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1792.0
margin_bottom = 1008.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="OptionBox" type="TextureRect" parent="."]
margin_left = 174.957
margin_top = 95.4144
margin_right = 394.957
margin_bottom = 425.414
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="OptionBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -172.0
margin_right = 95.0
margin_bottom = 170.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="KeysOption" type="OptionButton" parent="OptionBox/VBoxContainer"]
margin_top = 23.0
margin_right = 190.0
margin_bottom = 43.0

[node name="SexButton" type="CheckButton" parent="OptionBox/VBoxContainer"]
margin_top = 47.0
margin_right = 190.0
margin_bottom = 87.0
text = "Sex"

[node name="GoreButton" type="CheckButton" parent="OptionBox/VBoxContainer"]
margin_top = 91.0
margin_right = 190.0
margin_bottom = 131.0
text = "Gore"

[node name="InterfaceButton" type="CheckButton" parent="OptionBox/VBoxContainer"]
margin_top = 135.0
margin_right = 190.0
margin_bottom = 175.0
pressed = true
text = "Interface"

[node name="Male" type="HBoxContainer" parent="OptionBox/VBoxContainer"]
margin_top = 179.0
margin_right = 190.0
margin_bottom = 199.0

[node name="Label" type="Label" parent="OptionBox/VBoxContainer/Male"]
margin_top = 3.0
margin_right = 54.0
margin_bottom = 17.0
rect_min_size = Vector2( 54, 0 )
text = "Male"

[node name="MaleMode" type="OptionButton" parent="OptionBox/VBoxContainer/Male"]
margin_left = 58.0
margin_right = 188.0
margin_bottom = 20.0
rect_min_size = Vector2( 130, 0 )
icon_align = 1

[node name="Spacer2" type="Control" parent="OptionBox/VBoxContainer"]
margin_top = 203.0
margin_right = 190.0
margin_bottom = 213.0
rect_min_size = Vector2( 0, 10 )

[node name="Female" type="HBoxContainer" parent="OptionBox/VBoxContainer"]
margin_top = 217.0
margin_right = 190.0
margin_bottom = 237.0

[node name="Label" type="Label" parent="OptionBox/VBoxContainer/Female"]
margin_top = 3.0
margin_right = 54.0
margin_bottom = 17.0
rect_min_size = Vector2( 54, 0 )
text = "Female"

[node name="FemaleMode" type="OptionButton" parent="OptionBox/VBoxContainer/Female"]
margin_left = 58.0
margin_right = 188.0
margin_bottom = 20.0
rect_min_size = Vector2( 130, 0 )

[node name="FWeapon" type="HBoxContainer" parent="OptionBox/VBoxContainer"]
margin_top = 241.0
margin_right = 190.0
margin_bottom = 261.0

[node name="Label" type="Label" parent="OptionBox/VBoxContainer/FWeapon"]
margin_top = 3.0
margin_right = 54.0
margin_bottom = 17.0
rect_min_size = Vector2( 54, 0 )
text = "Weapon"

[node name="FemaleWeapon" type="OptionButton" parent="OptionBox/VBoxContainer/FWeapon"]
margin_left = 58.0
margin_right = 188.0
margin_bottom = 20.0
rect_min_size = Vector2( 130, 0 )

[node name="Spacer" type="Control" parent="OptionBox/VBoxContainer"]
margin_top = 265.0
margin_right = 190.0
margin_bottom = 275.0
rect_min_size = Vector2( 0, 10 )

[node name="StartButton" type="Button" parent="OptionBox/VBoxContainer"]
margin_top = 279.0
margin_right = 190.0
margin_bottom = 319.0
rect_min_size = Vector2( 0, 40 )
text = "Start"

[connection signal="gui_input" from="Background" to="." method="_on_Background_gui_input"]
[connection signal="item_selected" from="OptionBox/VBoxContainer/KeysOption" to="." method="_on_KeysOption_item_selected"]
[connection signal="toggled" from="OptionBox/VBoxContainer/SexButton" to="." method="_on_SexButton_toggled"]
[connection signal="toggled" from="OptionBox/VBoxContainer/GoreButton" to="." method="_on_GoreButton_toggled"]
[connection signal="toggled" from="OptionBox/VBoxContainer/InterfaceButton" to="." method="_on_InterfaceButton_toggled"]
[connection signal="item_selected" from="OptionBox/VBoxContainer/Male/MaleMode" to="." method="_on_MaleMode_item_selected"]
[connection signal="ready" from="OptionBox/VBoxContainer/Male/MaleMode" to="." method="_on_DifficultyOption_ready"]
[connection signal="item_selected" from="OptionBox/VBoxContainer/Female/FemaleMode" to="." method="_on_FemaleMode_item_selected"]
[connection signal="ready" from="OptionBox/VBoxContainer/Female/FemaleMode" to="." method="_on_DifficultyOption_ready"]
[connection signal="item_selected" from="OptionBox/VBoxContainer/FWeapon/FemaleWeapon" to="." method="_on_FemaleWeapon_item_selected"]
[connection signal="ready" from="OptionBox/VBoxContainer/FWeapon/FemaleWeapon" to="." method="_on_DifficultyOption_ready"]
[connection signal="pressed" from="OptionBox/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
